fixed cmsInspector z-index issue

--- a/_css/main.css
+++ b/_css/main.css
@@ -722,7 +722,8 @@ $inspectorNavi-head-color:				#f2f2f2 !default;
   -o-transition: right .55s ease-in-out, opacity .3s ease-in-out;
   transition: right .55s ease-in-out, opacity .3s ease-in-out;
   opacity: 0;
-  color: #1a1a1a; }
+  color: #1a1a1a;
+  z-index: 6000; }
   .cmsInspector--sidebar {
     left: auto;
     right: -355px; }
